# plotlyst

./: .codeclimate.yml  .gitignore  .gitlab-ci.yml  .pyqt5ac.yml  .travis.yml  LICENSE  README.md  analyze.py  beta-release.sh  clean_local_branches.sh  co_main.sh  designer.sh  gen.sh  id.py  kill.sh  persist_db.py  pyproject.toml  qta.sh  run.sh  setup.cfg  setup.py  test.docx  test.sh  test_client.sh  uic_gen.py  update_plotlyst_libs.sh
.circleci/: config.yml
.github/: test-todos.md
.github/workflows/: build-briefcase.yml  build.yml  main.yml  qa.yml  test.yml
novel_outliner/: __main__.py  common.py
novel_outliner/core/: client.py  db.py  domain.py  persistence.py  project.py
novel_outliner/event/: core.py  handler.py
novel_outliner/model/: chapters_model.py  characters_model.py  common.py  novel.py  report.py  scenes_model.py  tasks_model.py  timeline_model.py  tree_model.py
novel_outliner/view/: character_editor.py  characters_view.py  common.py  icons.py  main_window.py  notes_view.py  novel_view.py  reports_view.py  scene_editor.py  scenes_view.py  stylesheet.py  tasks_view.py  timeline_view.py
novel_outliner/view/dialog/: about.py  error.py
plotlyst/: __main__.py
plotlyst/core/: client.py  domain.py  persistence.py  project.py
plotlyst/model/: chapters_model.py  characters_model.py  novel.py  report.py  scenes_model.py  timeline_model.py
plotlyst/test/: common.py  conftest.py
plotlyst/view/: character_editor.py  characters_view.py  common.py  home_view.py  icons.py  layout.py  main_window.py  notes_view.py  novel_view.py  reports_view.py  scene_editor.py  scenes_view.py  stylesheet.py  tasks_view.py  timeline_view.py
plugins/: __init__.py  button_plugin.py  character_plugin.py  display_plugin.py  input_plugin.py  manuscript_plugin.py  scene_plugin.py
resources/: NovelWithParts.scrivx  plotlyst-troubleshooting.txt  rev-2.sqlite
ui/: about_dialog.ui  artbreeder_picker_dialog.ui  avatar_selectors.ui  avatar_widget.ui  backstory_editor_dialog.ui  beat_widget.ui  board_view.ui  causality_item_widget.ui  cause_and_effect_editor.ui  character_avatar.ui  character_backstory_card.ui  character_card.ui  character_conflict_widget.ui  character_editor.ui  character_goal_widget.ui  character_profile_editor_dialog.ui  character_role_selector.ui  character_topic_editor.ui  characters_progress_widget.ui  characters_title.ui  characters_view.ui  characters_view_preferences_widget.ui  comment_widget.ui  comments_view.ui  db_migration_dialog.ui  directory_picker_dialog.ui  distraction_free_manuscript_editor.ui  docs_sidebar_widget.ui  draft_scenes_view.ui  export_manuscript_dialog.ui  field_text_selection_widget.ui  general_view.ui  grammar_popup.ui  home_view.ui  icon_selector_widget.ui  image_crop_dialog.ui  imported_novel_overview.ui  items_editor_dialog.ui  items_editor_widget.ui  journal_card.ui  (+58 more)
ui/hint/: scenes_view_hint.ui
ui/report/: character_arc_report.ui  character_report.ui  conflict_report.ui  manuscript_report.ui  plot_report.ui  scene_report.ui  stakes_report.ui  world_building_report.ui
(+292 files in other folders)
