[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotlyst"
version = "0.1.0"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [
    { name = "Zsolt Kovari" }
]
description = "Plotlyst"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "PyQt6==6.4.0",
    "PyQt6-Qt6==6.4.0",
    "overrides==3.1.0",
    "qtawesome==1.1.1",
    "PyQt6-Charts==6.4.0",
    "PyQt6-Charts-Qt6==6.4.0",
    "anytree==2.8.0",
    "emoji==2.2.0",
    "atomicwrites==1.4.0",
    "dataclasses-json==0.5.2",
    # "language-tool-python==2.7.0",
    "python-slugify==5.0.2",
    "striprtf==0.0.19",
    "textstat==0.7.2",
    "nltk==3.7",
    "requests==2.27.1",
    "qt-handy",
    "pypandoc==1.11",
]

[project.optional-dependencies]
test = [
    "pytest==6.2.4",
    "pytest-qt==4.0.2",
    "pytest-cov==2.12.1",
    "pytest-randomly==3.11.0",
    "pypandoc-binary==1.11",
]

[tool.briefcase]
project_name = "Plotlyst"
bundle = "com.plotlyst"
version = "0.1.0"

[tool.briefcase.app.plotlyst]
formal_name = "Plotlyst"
description = "Plotlyst application"
sources = [
    "src/main/python/plotlyst",
]
icon = "src/main/icons/Icon"
requires = [
    'qt-anim @ git+https://github.com/plotlyst/qt-anim.git',
    'qt-menu @ git+https://github.com/plotlyst/qt-menu.git',
    'qt-tour @ git+https://github.com/plotlyst/qt-tour.git',
    'fbs @ git+https://github.com/plotlyst/fbs.git@frozen',
    'qt-textedit @ git+https://github.com/plotlyst/qt-textedit.git',
    'language_tool_python @ git+https://github.com/plotlyst/language_tool_python.git@plotlyst'
]